--- a/blog/templates/blog-details.html
+++ b/blog/templates/blog-details.html
@@ -4,45 +4,34 @@
 
 {% include 'side_bar.html' %}
           <!-- Start single blog -->
+          
           <div class="col-md-8 col-sm-8 col-xs-12">
             <div class="row">
               <div class="col-md-12 col-sm-12 col-xs-12">
                 <!-- single-blog start -->
+                
                 <article class="blog-post-wrapper">
                   <div class="post-thumbnail">
-                    <img src="/static/img/blog/6.jpg" alt="" />
+                    <img src="{{post.thumbnail.url}}" alt="{{post.title}}" />
                   </div>
                   <div class="post-information">
-                    <h2>Blog image post layout</h2>
+                    <h2>{{post.title}}</h2>
                     <div class="entry-meta">
-                      <span class="author-meta"><i class="fa fa-user"></i> <a href="#">admin</a></span>
-                      <span><i class="fa fa-clock-o"></i> march 28, 2016</span>
-                      <span class="tag-meta">
-                        <i class="fa fa-folder-o"></i>
-                        <a href="#">painting</a>,
-                        <a href="#">work</a>
-                      </span>
-                      <span>
-                        <i class="fa fa-tags"></i>
-                        <a href="#">tools</a>,
-                        <a href="#"> Humer</a>,
-                        <a href="#">House</a>
-                      </span>
-                      <span><i class="fa fa-comments-o"></i> <a href="#">6 comments</a></span>
+                      <span class="author-meta"><i class="fa fa-user"></i> <a href="#">{{post.author}}</a></span>
+                      <span><i class="fa fa-clock-o"></i> {{ post.created_at }}</span>
+                      
+                      {% comment %} <span><i class="fa fa-comments-o"></i> <a href="#">6 comments</a></span> {% endcomment %}
                     </div>
                     <div class="entry-content">
-                      <p>Aliquam et metus pharetra, bibendum massa nec, fermentum odio. Nunc id leo ultrices, mollis ligula in, finibus tortor. Mauris eu dui ut lectus fermentum eleifend. Pellentesque faucibus sem ante, non malesuada odio varius nec. Suspendisse
-                        potenti. Proin consectetur aliquam odio nec fringilla. Sed interdum at justo in efficitur. Vivamus gravida volutpat sodales. Fusce ornare sit amet ligula condimentum sagittis.</p>
+                      <h6>{{post.body}}</6>
                       <blockquote>
-                        <p>Quisque semper nunc vitae erat pellentesque, ac placerat arcu consectetur. In venenatis elit ac ultrices convallis. Duis est nisi, tincidunt ac urna sed, cursus blandit lectus. In ullamcorper sit amet ligula ut eleifend. Proin dictum
-                          tempor ligula, ac feugiat metus. Sed finibus tortor eu scelerisque scelerisque.</p>
+                        <p>{{post.summary}}</p>
                       </blockquote>
-                      <p>Aenean et tempor eros, vitae sollicitudin velit. Etiam varius enim nec quam tempor, sed efficitur ex ultrices. Phasellus pretium est vel dui vestibulum condimentum. Aenean nec suscipit nibh. Phasellus nec lacus id arcu facilisis elementum.
-                        Curabitur lobortis, elit ut elementum congue, erat ex bibendum odio, nec iaculis lacus sem non lorem. Duis suscipit metus ante, sed convallis quam posuere quis. Ut tincidunt eleifend odio, ac fringilla mi vehicula nec. Nunc vitae
-                        lacus eget lectus imperdiet tempus sed in dui. Nam molestie magna at risus consectetur, placerat suscipit justo dignissim. Sed vitae fringilla enim, nec ullamcorper arcu.</p>
                     </div>
                   </div>
                 </article>
+                
+                
                 <div class="clear"></div>
                 <div id="disqus_thread"></div> 
 
@@ -82,13 +71,16 @@
   async
 ></script>
 {% endblock %}
+                
                 <!-- single-blog end -->
               </div>
             </div>
           </div>
+          
         </div>
       </div>
     </div><!-- End Blog Page -->
+    
 
 
 
