--- a/blog/templates/blog-details.html
+++ b/blog/templates/blog-details.html
@@ -23,7 +23,7 @@
                       {% comment %} <span><i class="fa fa-comments-o"></i> <a href="#">6 comments</a></span> {% endcomment %}
                     </div>
                     <div class="entry-content">
-                      <h6>{{post.body}}</6>
+                      <p>{{post.body}}</p>
                       <blockquote>
                         <p>{{post.summary}}</p>
                       </blockquote>
