--- a/blog/templates/_base.html
+++ b/blog/templates/_base.html
@@ -118,7 +118,72 @@
       {% endblock content %}
 
       <!-- ======= Footer ======= -->
-   <footer>        
+   <footer>    
+          <div class="footer-area">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="footer-content">
+              <div class="footer-head">
+                <div class="footer-logo">
+                  <h2>Cordial Exchange</h2>
+                </div>
+
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
+                <div class="footer-icons">
+                  <ul>
+                    <li>
+                      <a href="https://twitter.com/Cordialexchang1?s=09"><i class="fa fa-facebook"></i></a>
+                    </li>
+                    <li>
+                      <a href="https://www.facebook.com/cordialexchange/"><i class="fa fa-twitter"></i></a>
+                    </li>
+                    <li>
+                      <a href="#"><i class="fa fa-instagram"></i></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- end single footer -->
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="footer-content">
+              <div class="footer-head">
+                <h4>information</h4>
+                <p>
+                  Contact Us Through The Following Outlets
+                </p>
+                <div class="footer-contacts">
+                  <p><span>Tel:</span> +234 903 639 3128</p>
+                  <p><span>Email:</span> admin@cordialexchange.io</p>
+                  <p><span>Working Hours:</span> 9am-5pm</p>
+                  <p><span>Location :</span>18A, Road 3 Ikota Villa Estate Lekki - Epe Expy, 101245, Lagos Nigeria.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- end single footer -->
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <div class="footer-content">
+              <div class="footer-head">
+                <h4>Instagram</h4>
+                <div class="flicker-img">
+                  <a href="#"><img src="/static/img/portfolio/1.jpg" alt=""></a>
+                  <a href="#"><img src="/static/img/portfolio/2.jpg" alt=""></a>
+                  <a href="#"><img src="/static/img/portfolio/3.jpg" alt=""></a>
+                  <a href="#"><img src="/static/img/portfolio/4.jpg" alt=""></a>
+                  <a href="#"><img src="/static/img/portfolio/5.jpg" alt=""></a>
+                  <a href="#"><img src="/static/img/portfolio/6.jpg" alt=""></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
          <div class="footer-area-bottom">
             <div class="container">
                <div class="row">
