--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -280,7 +280,7 @@ div#preloader {
 }
 
 .header-bg {
-  background: url(../img/slider/slider1.jpg);
+  background: url(../img/slider/hd.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
