--- a/blog/templates/_base.html
+++ b/blog/templates/_base.html
@@ -171,10 +171,8 @@
           <div class="col-md-4 col-sm-4 col-xs-12">
             <div class="footer-content">
               <div class="footer-head">
-                <h4>information</h4>
-                <p>
-                  Contact Us Through The Following Outlets
-                </p>
+                <h4>Contact Us</h4>
+                
                 <div class="footer-contacts">
                   <p><span>Tel:</span> +234 903 639 3128</p>
                   <p><span>Email:</span> admin@cordialexchange.io</p>
