--- a/blog/templates/post_edit.html
+++ b/blog/templates/post_edit.html
@@ -1,90 +1,9 @@
-{% load static %}
-
 {% load crispy_forms_tags %}
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <!-- Required meta tags-->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="keywords" content="">
-
-    <!-- Title Page-->
-    <title>Create A New Blog Post</title>
-
-    <!-- Font special for pages-->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-
-    <link
-      href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}"
-      rel="stylesheet"/>
-    <!-- Main CSS-->
-    <link href="{% static 'css/form.css' %}" rel="stylesheet" media="all">
-
-    <script
-        type="text/javascript"
-        src='https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js'
-        referrerpolicy="origin">
-  </script>
-</head>
-
-<body>
-    <div class="page-wrapper bg-dark p-t-100 p-b-50">
-        <div class="wrapper wrapper--w900">
-            <div class="card card-6">
-                <div class="card-heading">
-                    <h2 class="title">Create A Post</h2>
-                </div>
-                <div class="card-body">
-                    <form id="formnow" class="formfes" method="POST">
-                        <div class="form-row">
-                            <div id="formdes" class="name value">
-                            
-                                {{form|crispy}}
-                                <textarea name="" id="" cols="30" rows="10" style="display: none;"></textarea>
-                                <!-- <input class="input--style-6" type="text"> -->
-                            </div>
-                            </div>
-                        </div> 
-                    </form>
-                </div>
-                <div class="card-footer">
-                    <button class="btn btn--radius-2 btn--blue-2" type="submit">Submit</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Jquery JS-->
-    <script src="/static/vendor/jquery/jquery.min.js"></script>
-
-
-    <!-- Main JS-->
-    <script src="{% static 'js/form.js' %}"></script>
-    <script>
-        tinymce.init({
-            selector: 'textarea',
-    plugins: [
-      'advlist autolink link image lists charmap print preview hr anchor pagebreak',
-      'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
-      'table emoticons template paste help'
-    ],
-    toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | ' +
-      'bullist numlist outdent indent | link image | print preview media fullpage | ' +
-      'forecolor backcolor emoticons | help',
-    menu: {
-      favs: {title: 'My Favorites', items: 'code visualaid | searchreplace | emoticons'}
-    },
-    menubar: 'favs file edit view insert format tools table help',
-    content_css: 'css/content.css'
-  });
-  </script>
-
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
-
-</html>
-<!-- end document-->
+{% extends '_base.html' %}
+{% block content %}
+<h1>Edit post</h1>
+<form action="" method="post">{% csrf_token %}
+{{ form|crispy }}
+<input type="submit" value="Update">
+</form>
+{% endblock content %}
