--- a/blog/templates/update_view.html
+++ b/blog/templates/update_view.html
@@ -37,16 +37,16 @@
         <div class="wrapper wrapper--w900">
             <div class="card card-6">
                 <div class="card-heading">
-                    <h2 class="title">Create A Post</h2>
+                    <h2 class="title">Update Post</h2>
                 </div>
                 <div class="card-body">
                     <form action="" class="formfes" method="POST" enctype="multipart/form-data">
                         <div class="form-row"> 
                              <div class="name value">
                                 {% csrf_token %}
-                                {{post_form|crispy}}
+                                {{form|crispy}}
                                 <textarea name="" id="" cols="30" rows="10" style="display: none;"></textarea>
-                                <input class="btn btn--radius-2 btn--blue-2" type="submit" value="Save">
+                                <input class="btn btn--radius-2 btn--blue-2" type="submit" value="Update">
                                 
                         
                             </div>
