--- a/blog/templates/list.html
+++ b/blog/templates/list.html
@@ -18,6 +18,7 @@
 
 
 
+
 {% load static %}
 
 {% load crispy_forms_tags %}
@@ -63,7 +64,7 @@
                     <form action="" class="formfes" method="POST">
                         <div class="form-row"> 
                              <div class="name value">
-                            
+                                {% csrf_token %}
                                 {{post_form|crispy}}
                                 <textarea name="" id="" cols="30" rows="10" style="display: none;"></textarea>
                                 <input class="btn btn--radius-2 btn--blue-2" type="submit" value="Save">
@@ -110,3 +111,21 @@
 
 </html>
 <!-- end document-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
