--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -280,15 +280,41 @@ div#preloader {
 }
 
 .header-bg {
-  background: url(../img/slider/abb.jpeg);
+  background: url(../img/slider/blogbg6.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: top center;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: 100%;
+  height: 100%;
+  background-attachment: fixed;
 }
 
 @media (min-width: 1025px) {
   .header-bg {
-    background-attachment: fixed;
+    background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: 100%;
+  height: 100%;
+  }
+}
+
+@media (min-width: 576px) {
+  .header-bg {
+    background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: 100%;
+  height: 100%;
   }
 }
 
