removed side_bar

--- a/blog/templates/side_bar.html
+++ b/blog/templates/side_bar.html
@@ -48,7 +48,7 @@
                   <!-- recent end -->
                 </div>
 
-                <div class="single-blog-page">
+                {% comment %} <div class="single-blog-page">
                   <div class="left-blog">
                     <h4>latest posts</h4>
                     <ul>
@@ -59,7 +59,7 @@
                       {% endfor %}
                       </ul>
                   </div>
-                </div>
+                </div> {% endcomment %}
 
                 <div class="single-blog-page">
                   <div class="left-blog">
