--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -1589,7 +1589,9 @@ preview-2
   padding: 0 5px;
   width: 100px;
   height: 50px;
+
 }
+
 
 .pst-content {
   display: inline-block;
@@ -1598,7 +1600,8 @@ preview-2
 }
 
 .pst-content p a:hover, .left-blog ul li a:hover {
-  color: #f7921a;
+  background-color: #f7921a;
+  font-size: 30px;
 }
 
 .blog-page .single-blog {
