--- a/blog/templates/blog-details.html
+++ b/blog/templates/blog-details.html
@@ -34,8 +34,8 @@
                 </article>
                 {% if user.is_authenticated %}
                   <div class="delup">
-                    <a class="btn btn-primary" href="{% url 'update' post.slug %}">Update</a>
-                    <a class="btn btn-danger" href="{% url 'delete' post.slug %}">Delete</a>
+                    <a class="btn btn-outline-primary" href="{% url 'update' post.slug %}">Update</a>
+                    <a class="btn btn-outline-danger" href="{% url 'delete' post.slug %}">Delete</a>
                   </div>
               {% endif %}
                 
