--- a/blog/templates/post_new.html
+++ b/blog/templates/post_new.html
@@ -73,19 +73,13 @@
     plugins: [
       'advlist autolink link image lists charmap print preview hr anchor pagebreak',
       'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime media nonbreaking',
-      'table emoticons template paste help',
-      'uploadimage'
+      'table emoticons template paste help'
     ],
     toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | ' +
       'bullist numlist outdent indent | link image | print preview media fullpage | ' +
-      'forecolor backcolor emoticons | help | ' + 
-      'uploadimage | ',
+      'forecolor backcolor emoticons | help',
     menu: {
       favs: {title: 'My Favorites', items: 'code visualaid | searchreplace | emoticons'}
-    },
-    paste_data_images: true,
-    images_upload_handler: function (blobInfo, success, failure){
-      success("data:" + blobInfo.blob().type + ";base64," + blobInfo.base64());
     },
     menubar: 'favs file edit view insert format tools table help',
     content_css: 'css/content.css',
