full name added

--- a/blog/templates/blog.html
+++ b/blog/templates/blog.html
@@ -20,7 +20,7 @@
                       
                       <span class="date-type">
                         <i class="fa fa-calendar"></i>{{post.created_at}}
-                        Posted by - {{post.author}}
+                        Posted by - {{post.full_name}}
                       </span>
                     </div>
                     <div id="titles" class="blog-text">
