title n meta length

--- a/blog/templates/blog-details.html
+++ b/blog/templates/blog-details.html
@@ -19,7 +19,7 @@
                   <div class="post-information">
                     <h2>{{post.title}}</h2>
                     <div class="entry-meta">
-                      <span class="author-meta"><i class="fa fa-user"></i> <a href="#">{{post.author}}</a></span>
+                      <span class="author-meta"><i class="fa fa-user"></i> <a>{{post.full_name}}</a></span>
                       <span><i class="fa fa-clock-o"></i> {{ post.created_at }}</span>
                       
                       {% comment %} <span><i class="fa fa-comments-o"></i> <a href="#">6 comments</a></span> {% endcomment %}
