--- a/blog/templates/_base.html
+++ b/blog/templates/_base.html
@@ -118,6 +118,11 @@
       </div>
       <!-- End Blog Header -->
 
+            <!-- ======= Blog Page ======= -->
+      <div class="blog-page area-padding">
+        <div class="container">
+          <div class="row">
+
       {% block content %}
 
       {% endblock content %}
