--- a/blog/templates/pagination.html
+++ b/blog/templates/pagination.html
@@ -1,6 +1,6 @@
 
 <div class="pagination">
-  <span class="step-links">
+  <span class="step-links" style="padding-bottom: 20px;">
     {% if page.has_previous %}
     <a href="?page={{ page.previous_page_number }}">Previous</a>
     {% endif %}
