--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -290,6 +290,11 @@ div#preloader {
   background-size: 100%;
   height: 100%;
   background-attachment: fixed;
+  display: block;
+  margin: 0px !important;
+  padding: 0px !important;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 @media (min-width: 1025px) {
@@ -315,6 +320,25 @@ div#preloader {
   -o-background-size: cover;
   background-size: 100%;
   height: 100%;
+  }
+}
+
+@media (min-width: 150px) {
+  .header-bg {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: 100%;
+  height: 100%;
+  background-attachment: fixed;
+  display: block;
+  margin: 0px !important;
+  padding: 0px !important;
+  overflow-x: hidden;
+  overflow-y: hidden;
   }
 }
 
