--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -280,7 +280,7 @@ div#preloader {
 }
 
 .header-bg {
-  background: url(../img/slider/blogbg6.jpg);
+  background: url(../img/slider/blog.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -288,10 +288,20 @@ div#preloader {
   height: 100%;
   background-attachment: fixed;
   display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  content: "";
   margin: 0px !important;
   padding: 0px !important;
   overflow-x: hidden;
   overflow-y: hidden;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 }
 
 @media (min-width: 1025px) {
