--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -283,22 +283,7 @@ div#preloader {
   background: url(../img/slider/blog.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
-  background-size: 100%;
-  height: 100%;
-  background-attachment: fixed;
-  display: block;
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -10;
-  content: "";
-  margin: 0px !important;
-  padding: 0px !important;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  background-position: top center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -307,36 +292,36 @@ div#preloader {
 @media (min-width: 1025px) {
   .header-bg {
     background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-size: 100%;
-  height: 100%;
+    background-size: cover;
+    background-position: top center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-attachment: fixed;
   }
 }
 
 @media (min-width: 576px) {
   .header-bg {
     background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-size: 100%;
-  height: 100%;
+    background-size: cover;
+    background-position: top center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-attachment: fixed;
   }
 }
 
 @media (min-width: 150px) {
-  .header-bg {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-size: 100%;
-  height: 100%;
-  background-attachment: fixed;
-  display: block;
-  margin: 0px !important;
-  padding: 0px !important;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  .header-bg{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-attachment: fixed;
   }
 }
 
