--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -279,51 +279,6 @@ div#preloader {
   }
 }
 
-.header-bg {
-  background: url(../img/slider/blog.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: top center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-}
-
-@media (min-width: 1025px) {
-  .header-bg {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-attachment: fixed;
-  }
-}
-
-@media (min-width: 576px) {
-  .header-bg {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-attachment: fixed;
-  }
-}
-
-@media (min-width: 150px) {
-  .header-bg{
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-attachment: fixed;
-  }
-}
 
 .home-overly {
   background: rgba(0, 0, 0, 0.5);
@@ -528,20 +483,20 @@ div#preloader {
 
 .layer-1-3 a.ready-btn:hover {
   color: #fff;
-  background: #3EC1D5;
-  border: 1px solid #3EC1D5;
+  background: #f7921a;
+  border: 1px solid #f7921a;
   text-decoration: none;
 }
 
 .ready-btn.right-btn {
   margin-right: 15px;
-  background: #3EC1D5;
-  border: 1px solid #3EC1D5 !important;
+  background: #f7921a;
+  border: 1px solid #f7921a !important;
 }
 
 .ready-btn.right-btn:hover {
   background: transparent !important;
-  border: 1px solid #fff !important;
+  border: 1px solid #f7921a !important;
 }
 
 .nivo-controlNav {
@@ -573,7 +528,7 @@ div#preloader {
 
 .nivo-controlNav a:hover, .nivo-controlNav a.active {
   background: #fff none repeat scroll 0 0;
-  border-color: #3EC1D5;
+  border-color: #f7921a;
   -moz-transform: rotate(180deg);
   -webkit-transform: rotate(180deg);
   -o-transform: rotate(180deg);
@@ -643,7 +598,7 @@ div#preloader {
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   .slider-content {
-    padding: 70px 0px;
+    padding: 20px 0px;
   }
   .layer-1-1 h2, .layer-1-2 h1 {
     font-size: 24px;
@@ -819,9 +774,9 @@ preview-2
 }
 
 .preview-2 .nivo-directionNav a.nivo-nextNav:hover:before, .preview-2 .nivo-directionNav a.nivo-prevNav:hover:before {
-  border-color: #3EC1D5;
+  border-color: #f7921a;
   color: #fff;
-  background: #3EC1D5;
+  background: #f7921a;
 }
 
 .preview-2 .nivo-directionNav a.nivo-nextNav::before {
