--- a/blog/templates/_base.html
+++ b/blog/templates/_base.html
@@ -130,11 +130,11 @@
                   <!-- layer 1 -->
                   <div class="layer-1-1 hidden-xs wow animate__slideInUp animate__animated" data-wow-duration="2s"
                     data-wow-delay=".2s">
-                    <h2 class="title1">Bitcoin and Giftcards </h2>
+                    <h2 class="title1">Courtesy of Cordial Exchange</h2>
                   </div>
                   <!-- layer 2 -->
                   <div class="layer-1-2 wow animate__fadeIn animate__animated" data-wow-duration="2s" data-wow-delay=".1s">
-                    <h1 class="title2">Trade Your Bitcoin and Giftcards With Us</h1>
+                    <h1 class="title2">Don't Miss Out On Insightful Updates</h1>
                   </div>
                 </div>
               </div>
