fixed draft issue

--- a/blog/templates/post_new.html
+++ b/blog/templates/post_new.html
@@ -48,11 +48,13 @@
                                 <textarea name="" id="" cols="30" rows="10" style="display: none;"></textarea>
                                 <input class="btn btn--radius-2 btn--blue-2" type="submit" value="Save">
                                 
-                        
+                                
                             </div>
                         </div> 
                         
                     </form>
+                    <div style="text-align: center;"><a href="/" class="btn btn-secondary" >Back</a></div>
+                    
                 </div>
                 <div class="card-footer">
                     
