--- a/blog/templates/_base.html
+++ b/blog/templates/_base.html
@@ -55,6 +55,15 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet" />
 
     <script src="https://cdn.tiny.cloud/1/asaiq8ufshaej6j2hkt9mw8h1h9s4i6q5lfrt34odv2ijhkk/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2FD7JS8X9Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2FD7JS8X9Y');
+</script>
   </head>
 
   <body data-spy="scroll" data-target="#navbar-example">
